--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Server Repo for Building Up",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "start": "node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,11 +26,18 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express-session": "^1.17.0",
+    "apollo-server": "^2.17.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^15.3.0",
     "helmet": "^4.1.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "lodash": "^4.17.20",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
