Fix development.env file

--- a/development.env
+++ b/development.env
@@ -1,4 +1,4 @@
 POSTGRES_USER=alfm
 POSTGRES_PASSWORD=buildingup
 POSTGRES_DB=building_up_dev
-PGDATA: /var/lib/postgresql/data/pgdata
+PGDATA=/var/lib/postgresql/data/pgdata
