--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     building-up-server:
         depends_on:
             - building-up-db
+            - building-up-redis
         build:
             context: .
             dockerfile: Dockerfile
@@ -34,8 +35,17 @@ services:
             target: /var/lib/postgresql/data
         expose:
         - 5432
+    building-up-redis:
+        image: "redis:alpine"
+        ports:
+        - "6379:6379"
+        command: ["redis-server", "--port", "6379"]
+        expose: 
+        - 6379
+
 
 volumes:
     postgresql:
     postgresql_data:
+
           
