--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.20",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   }
