--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
     "@types/cors": "^2.8.7",
     "@types/express-session": "^1.17.0",
     "apollo-server": "^2.17.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "graphql-tools": "^6.2.3",
     "helmet": "^4.1.1",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "mysql2": "^2.2.5",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
