--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "stripe": "^8.97.0"
   }
 }
