--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/uwblueprint/building-up-server#readme",
   "devDependencies": {
     "@types/node": "^14.10.1",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
@@ -27,7 +29,7 @@
     "@types/cors": "^2.8.7",
     "@types/express-session": "^1.17.0",
     "apollo-server": "^2.17.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
