--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "mysql2": "^2.2.5",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.0.2",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "stripe": "^8.97.0"
   }
 }
