--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "homepage": "https://github.com/uwblueprint/building-up-server#readme",
   "devDependencies": {
     "@types/node": "^14.10.1",
-    "eslint": "^7.10.0",
-    "eslint-plugin-react": "^7.21.3",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "prettier": "2.0.1",
     "sequelize-cli": "^6.2.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
