--- a/package.json
+++ b/package.json
@@ -18,21 +18,15 @@
   },
   "homepage": "https://github.com/uwblueprint/building-up-server#readme",
   "devDependencies": {
-    "@types/node": "^14.10.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "3.1.2",
     "prettier": "2.0.1",
-    "sequelize-cli": "^6.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.7",
-    "@types/express-session": "^1.17.0",
     "apollo-server": "^2.17.0",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
@@ -41,16 +35,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^5.0.0",
     "helmet": "^4.1.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mysql2": "^2.2.5",
     "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "stripe": "^8.97.0"
