--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "nanoid-good": "^3.1.0",
     "pg": "^8.3.3",
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
