--- a/.env.local
+++ b/.env.local
@@ -6,9 +6,9 @@ POSTGRES_PROD_HOST=
 POSTGRES_PROD_PORT=
 
 # DEVELOPMENT DB CREDENTIALS
-POSTGRES_DEV_USER=
-POSTGRES_DEV_PASSWORD=
-POSTGRES_DEV_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 PGDATA=
 
 # KEYS
