--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nanoid-good": "^3.1.0",
     "pg": "^8.3.3",
     "redis": "^3.0.2",
+    "retry-as-promised": "^3.2.0",
     "sequelize": "^6.3.5",
     "stripe": "^8.97.0"
   }
