Minor improvements env variables

--- a/.env.local
+++ b/.env.local
@@ -1,14 +1,10 @@
-# PRODUCTION DB CREDENTIALS (HEROKU)
-POSTGRES_PROD_DB=
-POSTGRES_PROD_USER=
-POSTGRES_PROD_PASSWORD=
-POSTGRES_PROD_HOST=
-POSTGRES_PROD_PORT=
-
-# DEVELOPMENT DB CREDENTIALS
+# DB CREDENTIALS
 POSTGRES_USER=alfm
 POSTGRES_PASSWORD=buildingup
 POSTGRES_DB=building_up_dev
+POSTGRES_HOST=building-up-db
+POSTGRES_PORT=5432
+POSTGRES_REQUIRE_SSL=0
 PGDATA=/var/lib/postgresql/data/pgdata
 
 # KEYS
