--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,8 @@
+require('dotenv').config();
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/config/config.json'),
+  'config': path.resolve('src/config/config.js'),
   'models-path': path.resolve('src/models'),
   'migrations-path': path.resolve('src/migrations')
 }
