--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
     "apollo-server": "^2.17.0",
+    "apollo-server-errors": "^2.4.2",
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
