--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "pg": "^8.3.3",
     "redis": "^3.0.2",
     "retry-as-promised": "^3.2.0",
-    "sequelize": "^6.3.5",
-    "stripe": "^8.97.0"
+    "sequelize": "^6.3.5"
   }
 }
